[gd_scene load_steps=4 format=2]

[ext_resource path="res://CharacterCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Card.tscn" type="PackedScene" id=2]
[ext_resource path="res://AnyCardEnlarge.gd" type="Script" id=3]

[node name="CardEnlarge" type="Node2D"]
script = ExtResource( 3 )

[node name="CharacterCard" parent="." instance=ExtResource( 1 )]

[node name="Card0" parent="." instance=ExtResource( 2 )]

[node name="Card1" parent="." instance=ExtResource( 2 )]

[node name="Card2" parent="." instance=ExtResource( 2 )]
